[gd_scene load_steps=2 format=3 uid="uid://cujhi16cmpffu"]

[ext_resource type="Script" uid="uid://dlymnk4f0oavq" path="res://BrainVisualizer/UI/GenericElements/Scroll/BaseScroll.gd" id="1_mgl7a"]

[node name="Scroll_Vertical" type="ScrollContainer"]
offset_right = 298.0
offset_bottom = 51.0
horizontal_scroll_mode = 0
script = ExtResource("1_mgl7a")
button_notice_text = &"ADD ITEM"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="add_button_notice" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="gap" type="Control" parent="VBoxContainer/add_button_notice"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/add_button_notice"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ADD ITEM"

[node name="gap2" type="Control" parent="VBoxContainer/add_button_notice"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/add_button_notice/Button" to="." method="_add_button_proxy"]
